<resources>
    <string name="app_name">Kwots</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_copy_button_title">Copy</string>
    <string name="label_share_button_title">Share</string>
    <string name="label_open_quote_menu">quote_bottom_sheet</string>
    <string name="label_error">Error</string>
    <string name="label_quote_copied">Quote is copied to clipboard</string>
    <string name="label_shuffle_quotes">Shuffle</string>
    <string name="label_no_internet">No Internet Available</string>
    <string name="label_refresh_button">Refresh</string>
    <string name="label_read_quote">Speak Quote</string>
    <string name="label_home_menu">Home</string>
    <string name="label_menu_categories">Categories</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_feature_soon_msg">This feature will be added soon..</string>
    <string name="label_dark_mode">Dark Mode</string>
</resources>