<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.RonanSplashFragment">

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_app_icon_white"
        />

    <TextView
        android:id="@+id/tvAppNameSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/margin_32_dp"
        android:textSize="@dimen/text_32_sp"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:fontFamily="@font/font_bold"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/tvNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_radius_24_dp"
        android:text="@string/label_no_internet"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/color_white"
        android:fontFamily="@font/font_bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRefresh"
        style="@style/RonanCustomFilledBlackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12_dp"
        android:text="@string/label_refresh_button"
        android:textColor="@color/color_white"
        android:visibility="gone" />

</LinearLayout>